# ninpol

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  foo.vtk  pyproject.toml  requirements-dev.txt  setup.py
build-helpers/: clean.py  deleted.txt  list.py  list.txt
cython_debug/: cython_debug_info_ninpol.grid  cython_debug_info_ninpol.interpolator  cython_debug_info_ninpol.methods.linear  interpreter
interpolator/: grid.pyx
ninpol/: __init__.py  __init__.pyx  grid.pxd  grid.pyx  interpolator.pxd  interpolator.pyx
ninpol/_interpolator/: grid.pxd  grid.pyx  interpolator.pxd  interpolator.pyx  logger.pxd  logger.pyx  ninpol_defines.pxd  pseudo_grid.pxd  pseudo_grid.pyx
ninpol/_methods/: gls.pxd  gls.pyx  idw.pxd  idw.pyx  inv_dist.pxd  inv_dist.pyx  lpew3.pxd  lpew3.pyx  ls.pxd  ls.pyx  new_gls.pxd  regls.pxd  regls.pyx
ninpol/mesh/: grid.pxd  grid.pyx
ninpol/methods/: inv_dist.pyx  linear.pyx
ninpol/utils/: common.py  face_data_to_node.py  point_ordering.yaml  robin_hood.pxd
ninpol/windows/sys/: time.h
tests/: README.md  accuracy_test.py  config.yaml  conftest.py  correctness_test.py  create_vtk.py  demonstracao.py  grid_np.py  grid_profile.py  grid_test.py  performance_test.py  read_msh.py  test_grid.py  test_mesh.py  tests.py
tests/results/: accuracy.yaml  accuracy_test.yaml  graph.py  grid_performance.yaml  mpfa.yaml  performance.yaml  performance_test.yaml  test_graphs.py
tests/results/csv/: ALH_hexa.csv  ALH_tetra.csv  FAN_hexa.csv  FAN_tetra.csv  LIN_hexa.csv  QUAD_hexa.csv  QUAD_tetra.csv  mpfa_ALH.csv  mpfa_FAN.csv  mpfa_LIN.csv
tests/results/yaml/: accuracy copy.yaml  accuracy.yaml  accuracy_windows.yaml  mpfa copy.yaml  mpfa.yaml  performance copy.yaml  performance.yaml
tests/tests-mesh/: test1.msh
tests/utils/: analytical.py  create_vtk.py  gls.py  try_one.py  valgrind-python.supp
